--- a/style.css
+++ b/style.css
@@ -141,6 +141,11 @@ p{
     display: flex;
     justify-content: space-between;
 }
+.row-2{
+    margin-top: 5px;
+    display: flex;
+    justify-content: space-between;
+}
 .about-col{
     flex-basis: 31%;
     background: #fff3f3;
@@ -234,28 +239,32 @@ h3{
 .quotes{
     width: 80%;
     margin: auto;
-    padding-top: 100px;
+    padding-top: 50px;
     text-align: center;
+    
 }
 .quotes-col{
-    flex-basis: 44%;
+    flex-basis: 45%;
     border-radius: 10px;
     margin-bottom: 5%;
     text-align: left;
     background:rgba(93, 154, 248, 0.8);
-    padding: 25px;
-    cursor: pointer;
+    padding: 15px;
     display: flex;
 }
 .quotes-col img{
-    height: 40px;
+    width: 100px;
+    height: 100px;
     margin-left: 5px;
-    margin-right: 30px;
-    border-radius: 50%;
+    margin-right: 20px;
+    border-radius: 10%;
+    border-color: rgba(0, 0, 0, 0.64);
+    border-style: solid;
 }
 .quotes-col p{
     padding: 0;
     color:rgba(10, 10, 10, 1);
+    font-style: italic;
 }
 .quotes-col h3{
     margin-top: 15px;
