--- a/style.css
+++ b/style.css
@@ -256,7 +256,6 @@ h3{
     margin: auto;
     padding-top: 50px;
     text-align: center;
-    
 }
 .quotes-col{
     flex-basis: 45%;
@@ -383,7 +382,6 @@ h3{
     color: white;
 }
 
-
 .abilities{
     width: 80%;
     margin: auto;
@@ -452,6 +450,46 @@ h5{
     }
 }
 
+
+.constellation{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+}
+h1{
+    font-size: 36px;
+    font-weight: 600;
+}
+.constellation-col{
+    flex-basis: 45%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: left;
+    background:rgba(93, 154, 248, 0.8);
+    padding: 15px;
+    display: flex;
+    width: -moz-fit-content;
+    width: fit-content;
+}
+.constellation-col img{
+    width: 100px;
+    height: 100px;
+    margin-left: 5px;
+    margin-right: 20px;
+    border-radius: 10%;
+    border-color: rgba(0, 0, 0, 0.64);
+    border-style: solid;
+}
+.constellation-col p{
+    padding: 0;
+    color:rgba(10, 10, 10, 1);
+    font-style: italic;
+}
+.constellation-col h3{
+    margin-top: 15px;
+    text-align: left;
+}
 /*-------------------------------------------FEET PAGE-------------------------------*/
 .sub-header-feet{
     height: 50vh;
